# banana

./: .gitattributes  .gitignore  AGCOM_INTEGRATION_COMPLETE.md  CLAUDE.md  Claude-KB.md  LOG.md  README.md  REST_API_IMPLEMENTATION.md  TESTING_COMPLETE.md  briefing.md  cloud-init-dev.yaml  identity.json  instructions.md  plan.md  progress.md  project-items.txt  pty-xterm-musings.md  restart-here.md  specs.md  tracker.md
agcom2/: .env.example  CLAUDE.md  CLI_TOUR.md  DEBUGGING_REPORT.md  DOCS.md  IMPLEMENTATION_SUMMARY.md  ISSUES_RESOLVED.md  LIBRARY_ANALYSIS.md  LIBRARY_SPEC.md  README.md  REST_API_QUICKSTART.md  REST_API_SPEC.md  TEST_COVERAGE_SUMMARY.md  TOUR.md  TOUR_RESULTS.md  comprehensive_test.py  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py  test_api_8004.py  test_filtering.py  test_message.json  tour_client.py
agcom2/agcom/console/: cli.py  commands.py  rendering.py
agcom2/agcom/tests/: __init__.py  test_address_book.py  test_session.py  test_storage.py  test_validation.py
agcom2/app/: config.py  dependencies.py  main.py
agcom2/app/models/: requests.py  responses.py
agcom2/app/routers/: audit.py  auth.py  contacts.py  health.py  messages.py  threads.py
agcom2/app/utils/: converters.py  errors.py
agcom2/scripts/: init_db.py
chat/app/server/: alembic.ini  pyproject.toml
chat/app/server/src/: config.py  main.py
chat/app/server/src/api/: attachments.py  chats.py  messages.py  schemas.py  users.py
chat/app/server/src/auth/: dependencies.py  router.py  schemas.py  service.py
chat/app/server/src/db/: engine.py  models.py  seed.py
chat/app/server/src/services/: link_preview.py
emailag/: .gitignore  CLAUDE.md  pyproject.toml  seed_data.py
emailag/agcom/: models.py  session.py  storage.py  validation.py
emailag/agcom/console/: cli.py
emailag/agcom/tests/: test_models.py  test_session.py  test_storage.py  test_validation.py
emailag/agcom_api/: __init__.py  auth.py  dependencies.py  main.py
emailag/agcom_api/models/: __init__.py  audit.py  auth.py  common.py  contacts.py  messages.py  threads.py
emailag/agcom_api/routers/: __init__.py  admin.py  audit.py  auth.py  contacts.py  health.py  messages.py  threads.py
emailag/agcom_viewer/: main.py
emailag/agcom_viewer/static/: app.js  index.html  style.css
emailag/spec/: agcom-api-spec.md  agcom-spec.md  agcom-viewer-spec.md
emailag/tests/: test_auth.py  test_auth_router.py  test_health.py  test_integration.py  test_models.py
emcom/: .gitignore  BUILD.md  CLAUDE.md  Claude-KB.md  Directory.Build.props  briefing.md  deploy.ps1  emcom-server.spec  emcom-tui.spec  identity.json  pyproject.toml  requirements.md  session.md  tracker.md
emcom/alice/: identity.json
emcom/alice/.claude/: settings.local.json
emcom/bob/: identity.json
emcom/bob/.claude/: settings.local.json
emcom/emcom/: __init__.py  _version.py  cli.py  client.py  formatting.py  models.py  tui.py
emcom/emcom_android/: .gitignore  CLAUDE.md  Claude-KB.md  gradlew  gradlew.bat  identity.json  settings.gradle.kts
emcom/emcom_android/app/: build.gradle.kts  proguard-rules.pro
emcom/emcom_server/: __init__.py  db.py  main.py  metrics_reader.py  models.py
emcom/emcom_server/routers/: attachments.py  email.py  identity.py  names.py  search.py  tags.py  threads.py  tracker.py
emcom/emcomcs/: BuildInfo.cs  EmcomClient.cs  Formatting.cs  JsonContext.cs  Models.cs  Program.cs  build-aot.bat  emcomcs.csproj
emcom/fellow-agents/workspaces/coder/: identity.json
emcom/fellow-agents/workspaces/coordinator/: identity.json
emcom/fellow-agents/workspaces/reviewer/: identity.json
emcom/tests/: test_cli_integration.py  test_db.py  test_server.py  test_tracker.py
emcom/trackercs/: BuildInfo.cs  Formatting.cs  JsonContext.cs  Models.cs  Program.cs  TrackerClient.cs  trackercs.csproj
python/: .env.sample  .gitignore  COVERAGE.md  COVERAGE_SETUP_COMPLETE.md  PERFORMANCE_NOTES.md  README.md  REST_API_README.md  demo_console.bat  demo_console.sh  pyproject.toml  pytest.ini.example  query_db.py  run_coverage.py  test.db-shm  test.db-wal  test_api_live.py
python/agcom/: CHANGELOG.md  QUICKSTART.md  README.md  __init__.py  models.py  session.py  storage.py  ulid_gen.py  validation.py
python/agcom/console/: __init__.py  __main__.py  cli.py  commands.py  config.py  formatting.py
python/agcom/tests/: test_access_control.py  test_config.py  test_phase2.py  test_threading.py
python/agcom_api/: __init__.py  auth.py  dependencies.py  main.py  write_queue.py
python/agcom_api/models/: __init__.py  requests.py  responses.py
python/agcom_api/routers/: admin.py  audit.py  auth.py  contacts.py  health.py  messages.py  threads.py
python/agcom_viewer/: __init__.py  main.py
python/agcom_viewer/static/: app.js  index.html  style.css
python/appPackage/: manifest.json
python/assistant/: __init__.py  main.py
python/assistant/agcom/: README.md  __init__.py  client.py  config.py  identity.py  models.py  test_client_basic.py  tools.py
python/assistant/agents/: __init__.py  base.py  cli.py  coder.py  delegation.py  em.py  orchestrator.py  personas.py  planner.py  reviewer.py  runner.py  security.py
python/assistant/bot/: __init__.py  app.py
python/assistant/config/: __init__.py  parser.py
python/assistant/llm/: __init__.py  client.py  config.py  tool_bridge.py
python/assistant/permissions/: __init__.py  audit.py  categories.py  checker.py
python/assistant/scripts/: __init__.py  executor.py  generator.py
python/assistant/tools/: __init__.py  executor.py  promoter.py  registry.py  storage.py
python/config/: assistant.sample.md
python/scripts/: 20260126_103952_this_script_will_output_the_current_day_of_the_wee.py  debug_llm_errors.py  debug_llm_loop.py  debug_structured_output.py  test_agent_base.py  test_agent_e2e.py  test_agent_team.py
python/tests/: README.md  TEST_RESULTS.md  __init__.py  agent_harness.py  conftest.py  test_agcom_client.py  test_agcom_identity.py  test_agcom_integration.py  test_agent_llm_decisions.py  test_api.py  test_app_registration.py  test_llm_identity.py
(+349 files in other folders)
