[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agcom"
version = "0.1.0"
description = "A Python library for multi-agent communication with email-like messaging"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Agent Communication Team" }
]
dependencies = [
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.2.0",
]

[project.scripts]
agcom = "agcom.console.cli:main"

[tool.setuptools.packages.find]
include = ["agcom*"]

[tool.pytest.ini_options]
testpaths = ["agcom/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
