[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emcom"
version = "0.1.0"
description = "Email-metaphor messaging for AI agent communication"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-dotenv",
    "textual>=0.47",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
emcom-tui = "emcom.tui:main"
emcom-server = "emcom_server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["emcom", "emcom_server"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"emcom_server/main.py" = ["E402"]  # import after class def is intentional
"tests/*" = ["E402"]  # env var must be set before import
