[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-assist"
version = "0.1.0"
description = "Local-first LLM assistant with script-to-tool promotion"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "My Assist Team" }
]

dependencies = [
    "microsoft-teams-ai>=2.0.0a8",
    "microsoft-teams-apps>=2.0.0a8",
    "microsoft-teams-devtools>=2.0.0a8",
    "pydantic-ai>=0.1.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0",
    "ulid-py>=1.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
my-assist = "assistant.main:main"
agcom-api = "agcom_api.main:run"
agcom = "agcom.console.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["assistant", "agcom", "agcom_api"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require live API server)",
]
addopts = "--cov=assistant --cov=agcom --cov=agcom_api --cov-report=html --cov-report=term --cov-report=json"

[tool.coverage.run]
source = ["assistant", "agcom", "agcom_api"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/setup.py",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@overload",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "My Assist Test Coverage Report"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
